GNOME Bugzilla – Bug 42068
Dragging icons adjusts scroll area in a way that causes immediate scrolling
Last modified: 2004-12-22 21:47:04 UTC
I (John) made dragging icons readjust the scroll area to fix the bug where when they're dropped outside of the current maximum scroll area the scroll bars readjust and you can't scroll to them. But this had an undesired effect that Arlo and I were looking at -- if you drag icons that happened to be the topmost (or leftmost/bottommost/rightmost) and leave them in the middle somewhere, the window scrolls because the scroll area becomes smaller and the vanished space scrolls away. This is disconcerting and weird. The rule should probably be that we make the scroll area bigger if necessary in this case, but we never make it smaller. ------- Additional Comments From darin@bentspoon.com 2000-08-09 17:32:44 ---- Adjusting the scroll area right away is fine. The problem is that we don't want immediate scrolling caused. One way to avoid this is to always include the current scroll position in the scroll area, but then we have to recompute the scroll region every time we scroll just in case. So it's not 100% obvious how to fix this just right. ------- Additional Comments From arlo@workthatmouse.com 2000-08-25 01:56:45 ---- *** Bug 42359 has been marked as a duplicate of this bug. *** ------- Additional Comments From darin@bentspoon.com 2000-09-28 11:21:34 ---- *** Bug 43330 has been marked as a duplicate of this bug. *** ------- Additional Comments From darin@bentspoon.com 2000-09-28 13:02:06 ---- Andy says this is now behaving worse than it was in PR1 and suggests that we fix it right away. ------- Additional Comments From bud@eazel.com 2000-09-29 16:49:48 ---- When a user drags icon(s), only those icons should end up in a new location on the screen. We should fix for PR2. ------- Additional Comments From sullivan@eazel.com 2000-10-02 17:46:19 ---- OK, the most annoying form of this bug has now been fixed. There are several related issues that aren't fixed though, including bug 43402, bug 43404, bug 43405, and bug 43406. ------- Additional Comments From eli@eazel.com 2000-10-16 19:30:06 ---- Batch-assigning QA ownership of remaining bugs to eli@eazel.com ------- Additional Comments From jonallen@sdf.lonestar.org 2000-10-23 12:33:11 ---- verified as fixed using 200010181508 rpm's. Only the dragged icons end up in new location on screen. ------- Additional Comments From arlo@workthatmouse.com 2000-12-21 14:01:03 ---- It's doing it again. Reopening per Darin's request. ------- Additional Comments From sullivan@eazel.com 2000-12-21 14:07:35 ---- This happens again for me too. I wonder who broke it this time? ------- Additional Comments From darin@bentspoon.com 2000-12-29 17:39:24 ---- The reappearance of this bug likely caused bug 44116 to reappear as well. (John, maybe you can take that one from Gene?) ------- Additional Comments From sullivan@eazel.com 2001-01-02 08:50:17 ---- Darin, bug 44116 seems unrelated. Did you type the wrong number? ------- Additional Comments From darin@bentspoon.com 2001-01-02 09:21:59 ---- Right you are! I meant bug 44166. ------- Additional Comments From sullivan@eazel.com 2001-01-08 11:08:43 ---- I figured out what reintroduced this bug, and after talking to Darin we have an approach for fixing it: save the scroll origin per-directory in metadata, and use it when loading a directory. ------- Additional Comments From brett@eazel.com 2001-01-15 17:46:25 ---- I've played with this bug, and I can't produce any scrolling as a result of dragging corner icons. However, the only way to reduce the size of the scroll area is to perform any window resize. Even if I drop icons and scroll so they are all visible, the scroll area doesn't shrink. Is that the expected result? ------- Additional Comments From sullivan@eazel.com 2001-01-15 17:59:51 ---- The behavior brett reports is a related and much less annoying bug. I don't think it's written up, but it shouldn't be considered part of this bug. Please write it up separately. ------- Additional Comments From brett@eazel.com 2001-01-15 18:02:54 ---- Verifying original bug. Will fork off the related problem into a new bug tomorrow (going home now). ------- Additional Comments From brett@eazel.com 2001-01-16 15:18:12 ---- Opened bug #45691 about the problem mentioned in my comments on 01/15. ------- Bug moved to this database by unknown@bugzilla.gnome.org 2001-09-09 20:36 ------- The original reporter (arlo@workthatmouse.com) of this bug does not have an account here. Reassigning to the exporter, unknown@bugzilla.gnome.org.